--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,8 @@
         }
     ],
     "require": {
-        "slim/slim": "^3.0"
+        "slim/slim": "^3.0",
+        "denshade/qrimage": "^1.0",
+        "libern/qr-code-reader": "^1.0"
     }
 }
