--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "slim/slim": "^3.0",
         "denshade/qrimage": "^1.0",
-        "libern/qr-code-reader": "^1.0"
+        "libern/qr-code-reader": "^1.0",
+        "codeception/codeception": "^2.2"
     }
 }
