--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,16 @@
             "email": "your@email.here"
         }
     ],
+    "autoload": {
+        "psr-4": {"": "src"}
+    },
     "require": {
         "slim/slim": "^3.0",
         "denshade/qrimage": "^1.0",
         "libern/qr-code-reader": "^1.0",
         "codeception/codeception": "^2.2"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "5.5.7"
     }
 }
